modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/core/__pycache__/urls.cpython-311.pyc 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/core/__pycache__/views.cpython-311.pyc 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/core/templates/core/login.html 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/core/templates/core/register.html 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/core/urls.py 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/core/views.py 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/db.sqlite3 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/ecommerce_website/__pycache__/settings.cpython-311.pyc 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/ecommerce_website/__pycache__/urls.cpython-311.pyc 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/ecommerce_website/settings.py 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/ecommerce_website/urls.py 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/store/templates/store/include/navbar.html

--- a/18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/core/templates/core/register.html
+++ b/18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/core/templates/core/register.html
@@ -37,7 +37,7 @@
         </div>
         <div class="login-container">
             <button type="button" class="cancelbtn" id="cancel-signup-button"><a href="{% url 'home' %}">Cancel</a></button>
-            <span class="password">Already have accout? <a href="{% url 'login' %}">Login.</a></span>
+            <span class="password">Already have accout? <a href="{% url 'login_user' %}">Login.</a></span>
         </div>
     </form>
  
