--- a/18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/core/templates/core/login.html
+++ b/18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/core/templates/core/login.html
@@ -1,3 +1,4 @@
+
 {% extends 'store/base.html' %}
 {% load static %}
 
@@ -10,17 +11,17 @@
     <!-- login form -->
 
     <div class="form-container">
-    <form action="" method="post" class="login-form" id="login-form">
+    <form action="{% url 'login_user' %}" method="post" class="login-form">
         {% csrf_token %}
         <div class="img">
             <span id="close" class="close"><a href="{% url 'home' %}">&times;</a></span>
             <img src="{% static 'images/avatar.png' %}" alt="avatar" class="avatar" width="20%"> 
         </div>
         <div class="login-container">
-            <label for="email">Email:</label>
+            <label for="email">Email</label>
             <input type="text" placeholder="Enter Email" name="email" id="email" autocomplete="username" required>
             
-            <label for="password">Password:</label>
+            <label for="password">Password</label>
             <input type="password" placeholder="Enter Password" name="password" id="password" required>
 
             <button type="submit">Login</button>
@@ -30,13 +31,11 @@
         </div>
         <div class="login-container">
             
-            <span class="">Have no account <a href="{%url 'register' %}">Register?</a></span> 
+            <span class="">Have no account <a href="{% url 'register' %}">Register?</a></span> 
             <span class="password">Forgot <a href="#">password?</a></span>
         </div>
         
     </form>
-
-  
 </div>
 {% endblock content %}
     
