--- a/18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/store/templates/store/include/navbar.html
+++ b/18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/store/templates/store/include/navbar.html
@@ -50,11 +50,11 @@
                         {% endif %}
                         <div class="dropdown-content">
                             {% if user.is_authenticated %}
-                            <a href="{% url 'logout' %}" class="login-button" id="login-button">Logout</a>
+                            <a href="{% url 'logout_user' %}" class="login-button" id="login-button">Logout</a>
                             <hr>
                             <a href="{% url 'user_profile' %}" class="login-button" id="login-button">Profile</a>
                             {% else %}
-                            <a href="{% url 'login' %}" class="login-button" id="login-button">Login</a>
+                            <a href="{% url 'login_user' %}" class="login-button" id="login-button">Login</a>
                             <hr>
                             <a href="{% url 'register' %}" class="register-button" id="signup-button">Register</a>
                             {% endif %}
