--- a/19.1 Ecommerce App/Backend/main/core/templates/core/index.html
+++ b/19.1 Ecommerce App/Backend/main/core/templates/core/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Home page</h1>
+
+    <button type="button"><a href="{% url 'register' %}">Register</a></button>
 </body>
 </html>
