--- a/19.1 Ecommerce App/Backend/main/users/templates/users/register.html
+++ b/19.1 Ecommerce App/Backend/main/users/templates/users/register.html
@@ -10,5 +10,7 @@
         {{ form.as_p }}
         <button type="submit">Register</button>
     </form>
+
+    <p>Already have an account? <a href="{% url 'login' %}">Login</a></p>
 </body>
 </html>
