--- a/19.1 Ecommerce App/Backend/main/core/templates/core/index.html
+++ b/19.1 Ecommerce App/Backend/main/core/templates/core/index.html
@@ -8,6 +8,14 @@
 <body>
     <h1>Home page</h1>
 
+    
+    {% if user.is_authenticated %}
+    <p>You are logged in as {{ request.user.username }}</p>
+    <a href="{% url 'logout' %}">Logout</a>
+        
+    {% endif %}
+        
+
     <button type="button"><a href="{% url 'register' %}">Register</a></button>
 </body>
 </html>
