new file:   19.1 Ecommerce App/Backend/main/admin_portal/__init__.py 	new file:   19.1 Ecommerce App/Backend/main/admin_portal/admin.py 	new file:   19.1 Ecommerce App/Backend/main/admin_portal/apps.py 	new file:   19.1 Ecommerce App/Backend/main/admin_portal/forms.py 	new file:   19.1 Ecommerce App/Backend/main/admin_portal/migrations/__init__.py 	new file:   19.1 Ecommerce App/Backend/main/admin_portal/models.py 	new file:   19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/add_product.html 	new file:   19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/admin_portal.html 	new file:   19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/base.html 	new file:   19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/footer.html 	new file:   19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/inventory.html 	new file:   19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/navbar.html 	new file:   19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/orders.html 	new file:   19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/product_inventory.html 	new file:   19.1 Ecommerce App/Backend/main/admin_portal/tests.py 	new file:   19.1 Ecommerce App/Backend/main/admin_portal/urls.py 	new file:   19.1 Ecommerce App/Backend/main/admin_portal/views.py 	new file:   19.1 Ecommerce App/Backend/main/cart/__init__.py 	new file:   19.1 Ecommerce App/Backend/main/cart/admin.py 	new file:   19.1 Ecommerce App/Backend/main/cart/apps.py 	new file:   19.1 Ecommerce App/Backend/main/cart/cart.py 	new file:   19.1 Ecommerce App/Backend/main/cart/context_processors.py 	new file:   19.1 Ecommerce App/Backend/main/cart/migrations/__init__.py 	new file:   19.1 Ecommerce App/Backend/main/cart/models.py 	new file:   19.1 Ecommerce App/Backend/main/cart/templates/cart/cart.html 	new file:   19.1 Ecommerce App/Backend/main/cart/templates/cart/checkout.html 	new file:   19.1 E

--- a/19.1 Ecommerce App/Backend/main/core/templates/core/index.html
+++ b/19.1 Ecommerce App/Backend/main/core/templates/core/index.html
@@ -1,21 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Home page</h1>
+{% extends 'store/base.html' %}
+{% load static %}
 
+{% block title %}
+    Ecom
+{% endblock title %}
     
-    {% if user.is_authenticated %}
-    <p>You are logged in as {{ request.user.username }}</p>
-    <a href="{% url 'logout' %}">Logout</a>
-        
-    {% endif %}
-        
 
-    <button type="button"><a href="{% url 'register' %}">Register</a></button>
-</body>
-</html>
+{% block content %}
+    {% include 'core/include/hero.html' %}
+    <section>
+        <h3 class="section-title"><a href="{% url 'home' %}">Products</h3></a>
+        <div class= "product-container">
+            
+            {% for product in products %}
+            {% include 'store/include/product_card.html' %}
+            {% endfor %}
+        </div>
+    </section>
+
+    <section>
+        <h3 class="section-title"><a href="{% url 'new' %}">New Products</h3></a>
+        <div class= "product-container">
+            {% for product in new_products %}
+            {% include 'store/include/product_card.html' %}
+            {% endfor %}
+        </div>
+    </section>
+    <section>
+        <h3 class="section-title"><a href="{% url 'sale' %}">Products on Sale</h3></a>
+        <div class= "product-container">
+            {% for product in sale_products %}
+            {% include 'store/include/product_card.html' %}
+            {% endfor %}
+        </div>
+    </section>
+    <section>
+        <h3 class="section-title"><a href="{% url 'featured' %}">Featured Products</h3></a>
+        <div class= "product-container">
+            {% for product in featured_products %}
+            {% include 'store/include/product_card.html' %}
+            {% endfor %}
+        </div>
+    </section>
+{% endblock content %}
+    
