--- a/19.1 Ecommerce App/Backend/main/core/templates/core/include/navbar.html
+++ b/19.1 Ecommerce App/Backend/main/core/templates/core/include/navbar.html
@@ -15,9 +15,9 @@
                     <div class="dropdown-content">
                         
                         {% if user.is_authenticated %}
-                        <a href="{% url 'logout' %}" class="login-button" id="login-button">Logout</a>
+                        <a href="{% url 'logout_user' %}" class="login-button" id="login-button">Logout</a>
                         {% else %}                         
-                        <a href="{% url 'login' %}" class="login-button" id="login-button">Login</a>
+                        <a href="{% url 'login_user' %}" class="login-button" id="login-button">Login</a>
                         <hr>
                         <a href="{% url 'register' %}" class="register-button" id="signup-button">Register</a>
                         {% endif %}
