modified:   19.1 Ecommerce App/Backend/main/core/templates/core/base.html 	modified:   19.1 Ecommerce App/Backend/main/core/templates/core/include/navbar.html 	modified:   19.1 Ecommerce App/Backend/main/db.sqlite3 	new file:   19.1 Ecommerce App/Backend/main/store/migrations/0001_initial.py 	new file:   19.1 Ecommerce App/Backend/main/store/migrations/__pycache__/0001_initial.cpython-311.pyc 	modified:   19.1 Ecommerce App/Backend/main/users/__pycache__/urls.cpython-311.pyc 	modified:   19.1 Ecommerce App/Backend/main/users/templates/users/login.html 	modified:   19.1 Ecommerce App/Backend/main/users/templates/users/register.html 	modified:   19.1 Ecommerce App/Backend/main/users/urls.py

--- a/19.1 Ecommerce App/Backend/main/core/templates/core/base.html
+++ b/19.1 Ecommerce App/Backend/main/core/templates/core/base.html
@@ -39,7 +39,7 @@
         
     {% endblock content %}
     </div>
-    {% include 'store/include/footer.html' %}
+    {% include 'core/include/footer.html' %}
     </div>
 
     
