--- a/19.1 Ecommerce App/Backend/main/users/templates/users/register.html
+++ b/19.1 Ecommerce App/Backend/main/users/templates/users/register.html
@@ -1,16 +1,36 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Register</title>
-</head>
-<body>
-    <h2>Register</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Register</button>
-    </form>
+{% extends 'core/base.html' %}
+{% load static %}
 
-    <p>Already have an account? <a href="{% url 'login' %}">Login</a></p>
-</body>
-</html>
+{% block title %}
+    Register
+{% endblock title %}
+    
+
+
+{% block content %}
+<!-- Register form -->
+<div class="form-container">
+    <form action="{% url 'register' %}" method="post" class="register-form">
+        {% csrf_token %}
+        <div class="img">
+            <span id="close-signup-form" class="close"><a href="{% url 'home' %}">&times;</a></span>
+            <img src="{% static 'images/avatar.png' %}" alt="avatar" class="avatar" width="20%"> 
+        </div>
+        
+        <div class="login-container">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Register</button>
+        </div>
+        <div class="login-container">
+            <button type="button" class="cancelbtn" id="cancel-signup-button"><a href="{% url 'home' %}">Cancel</a></button>
+            <span class="password">Already have accout? <a href="{% url 'login' %}">Login.</a></span>
+        </div>
+    </form>
+ 
+
+
+    
+</div>
+{% endblock content %}
+    
