modified:   19. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/store/templates/store/home.html 	modified:   19.1 Ecommerce App/Backend/main/core/__pycache__/views.cpython-311.pyc 	modified:   19.1 Ecommerce App/Backend/main/db.sqlite3 	modified:   19.1 Ecommerce App/Backend/main/users/__pycache__/views.cpython-311.pyc 	modified:   19.1 Ecommerce App/Backend/main/users/templates/users/shipping_information.html 	modified:   19.1 Ecommerce App/Backend/main/users/templates/users/update_info.html 	modified:   19.1 Ecommerce App/Backend/main/users/templates/users/update_password.html 	modified:   19.1 Ecommerce App/Backend/main/users/templates/users/update_user.html 	modified:   19.1 Ecommerce App/Backend/main/users/templates/users/user_profile.html 	modified:   19.1 Ecommerce App/Backend/main/users/views.py

--- a/19. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/store/templates/store/home.html
+++ b/19. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/store/templates/store/home.html
@@ -7,7 +7,7 @@
     
 
 {% block content %}
-    {% include 'store/include/hero.html' %}
+    {% include 'core/include/hero.html' %}
     <section>
         <h3 class="section-title"><a href="{% url 'home' %}">Products</h3></a>
         <div class= "product-container">
