--- a/19.1 Ecommerce App/Backend/main/store/templates/store/category.html
+++ b/19.1 Ecommerce App/Backend/main/store/templates/store/category.html
@@ -7,7 +7,7 @@
     
 
 {% block content %}
-{% include 'store/include/hero.html' %}
+{% include 'core/include/hero.html' %}
 <section>
     <h3 class="section-title">{{ category.name}}'s Category</h3>
     <div class= "product-container">
