--- a/19.1 Ecommerce App/Backend/main/store/templates/store/sale.html
+++ b/19.1 Ecommerce App/Backend/main/store/templates/store/sale.html
@@ -7,7 +7,7 @@
     
 
 {% block content %}
-    {% include 'store/include/hero.html' %}
+    {% include 'core/include/hero.html' %}
     <section>
         <h3 class="section-title">Products on Sale</h3>
         <div class= "product-container">
