--- a/19.1 Ecommerce App/Backend/main/cart/templates/cart/checkout.html
+++ b/19.1 Ecommerce App/Backend/main/cart/templates/cart/checkout.html
@@ -1,11 +1,8 @@
 {% extends 'core/base.html' %}
 
-
 {% block title %}
-    checkout
+    Checkout
 {% endblock title %}
-    
-
 
 {% block content %}
 {% if cart_items %}
@@ -21,7 +18,6 @@
             <h1>Order Summary</h1>
             <hr> 
             <div class="cart-element">
-                
                 {% for item in cart_items %}
                 <div class="cart-item-image"><img src="{{ item.imageURL }}" alt="" width="60%"></div>
                 <div class="cart-item-name">{{ item.name }}</div>
@@ -45,23 +41,18 @@
     <div class="customer-information">
         <h1>Customer Information</h1>
         <div class="user-information">
-            <form action="">
-                <input type="text" placeholder="Name" name="name">
-                <input type="email" placeholder="Email" name="email">
+            <form>
+                <input type="text" name="first_name" value="{{ user_profile.user.first_name }} {{ user_profile.user.last_name }}" readonly>
+                <input type="email" name="email" value="{{ user_profile.user.email }}" readonly>
             </form>
         </div>
 
         <div class="shipping-information">
-            
             <h1>Shipping Information</h1>
-            <form action="">
+            <form method="post">
                 {% csrf_token %}
                 {{ form.as_p }}
-            <button type="submit">Save Shipping Address</button>
-                
-            </form>
-            <form action="">
-                <input type="submit" value="Continue" style="cursor: pointer;">
+                <input type="submit" value="Update Shipping Address" style="cursor: pointer;">
             </form>
 
             <div>
@@ -78,21 +69,22 @@
                     </ul>
                 {% endif %}
             </div>
+
+            <input type="submit" value="Continue" style="cursor: pointer;">
         </div>
         
     </div>
 </div>
 
 {% else %}
-        <h1>You have no items in Your cart... <a href="{% url 'home' %}">Continue shopping</a></h1>
-        {% endif %}
-        <section>
-            <h3 class="section-title"><a href="{% url 'home' %}">Products</h3></a>
-            <div class= "product-container">
-                
-                {% for product in products %}
-                {% include 'store/include/product_card.html' %}
-                {% endfor %}
-            </div>
-        </section>
+<h1>You have no items in your cart... <a href="{% url 'home' %}">Continue shopping</a></h1>
+{% endif %}
+<section>
+    <h3 class="section-title"><a href="{% url 'home' %}">Products</h3></a>
+    <div class="product-container">
+        {% for product in products %}
+        {% include 'store/include/product_card.html' %}
+        {% endfor %}
+    </div>
+</section>
 {% endblock content %}
