modified:   19.1 Ecommerce App/Backend/main/core/templates/core/base.html 	modified:   19.1 Ecommerce App/Backend/main/core/templates/core/include/hero.html 	modified:   19.1 Ecommerce App/Backend/main/core/templates/core/include/navbar.html 	modified:   19.1 Ecommerce App/Backend/main/db.sqlite3 	modified:   19.1 Ecommerce App/Backend/main/store/__pycache__/models.cpython-311.pyc 	new file:   19.1 Ecommerce App/Backend/main/store/migrations/0003_remove_product_category_product_category.py 	new file:   19.1 Ecommerce App/Backend/main/store/migrations/__pycache__/0003_remove_product_category_product_category.cpython-311.pyc 	modified:   19.1 Ecommerce App/Backend/main/store/models.py

--- a/19.1 Ecommerce App/Backend/main/core/templates/core/include/hero.html
+++ b/19.1 Ecommerce App/Backend/main/core/templates/core/include/hero.html
@@ -1,5 +1,5 @@
 <header>
     <div class="hero-header">
-        <h1>Bella Online Shop</h1>
+        <h1>Bellamore Apparels Store</h1>
     </div>
 </header>
