--- a/19.1 Ecommerce App/Backend/main/core/templates/core/base.html
+++ b/19.1 Ecommerce App/Backend/main/core/templates/core/base.html
@@ -19,7 +19,8 @@
 
 
   
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script></head>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+</head>
 <body>
     <div class="body-container">
     {% include 'core/include/navbar.html' %}
