modified:   19.1 Ecommerce App/Backend/main/core/templates/core/include/navbar.html 	modified:   19.1 Ecommerce App/Backend/main/db.sqlite3 	modified:   19.1 Ecommerce App/Backend/main/users/__pycache__/urls.cpython-311.pyc 	modified:   19.1 Ecommerce App/Backend/main/users/templates/users/login.html 	modified:   19.1 Ecommerce App/Backend/main/users/templates/users/register.html 	modified:   19.1 Ecommerce App/Backend/main/users/urls.py

--- a/19.1 Ecommerce App/Backend/main/users/templates/users/login.html
+++ b/19.1 Ecommerce App/Backend/main/users/templates/users/login.html
@@ -10,7 +10,7 @@
     <!-- login form -->
 
     <div class="form-container">
-    <form action="{% url 'login' %}" method="post" class="login-form">
+    <form action="{% url 'signin' %}" method="post" class="login-form">
         {% csrf_token %}
         <div class="img">
             <span id="close" class="close"><a href="{% url 'home' %}">&times;</a></span>
