--- a/19.1 Ecommerce App/Backend/main/users/templates/users/register.html
+++ b/19.1 Ecommerce App/Backend/main/users/templates/users/register.html
@@ -24,7 +24,7 @@
         </div>
         <div class="login-container">
             <button type="button" class="cancelbtn" id="cancel-signup-button"><a href="{% url 'home' %}">Cancel</a></button>
-            <span class="password">Already have accout? <a href="{% url 'login' %}">Login.</a></span>
+            <span class="password">Already have accout? <a href="{% url 'signin' %}">Login.</a></span>
         </div>
     </form>
  
