modified:   19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/navbar.html 	modified:   19.1 Ecommerce App/Backend/main/db.sqlite3 	modified:   19.1 Ecommerce App/Backend/main/main/__pycache__/settings.cpython-311.pyc 	modified:   19.1 Ecommerce App/Backend/main/main/settings.py

--- a/19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/navbar.html
+++ b/19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/navbar.html
@@ -23,7 +23,7 @@
             </ul>
         </div>
         <div class="cart">
-            <a href="{% url 'logout' %}" class="login-button" id="login-button">Logout</a>
+            <a href="{% url 'signout' %}" class="login-button" id="login-button">Logout</a>
         </div>
     </div>
 </nav>
