--- a/19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/add_product.html
+++ b/19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/add_product.html
@@ -59,7 +59,7 @@
             <h1 class="add-product-headings">ADD NEW PRODUCT</h1>
             <div class="product_form">
                 
-                <form method="POST" action="{% url 'add_product' %}" multiple enctype="multipart/form-data">
+                <form method="POST" action="{% url 'add_product' %}" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ form }}
                     <input type="submit" value="Submit">
