--- a/19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/add_product.html
+++ b/19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/add_product.html
@@ -61,7 +61,8 @@
                 
                 <form method="POST" action="{% url 'add_product' %}" enctype="multipart/form-data">
                     {% csrf_token %}
-                    {{ form }}
+                    {{ form.as_p }}
+                    {{ image_form.as_p }}
                     <input type="submit" value="Submit">
                   </form>
                   
