modified:   19.1 Ecommerce App/Backend/main/admin_portal/__pycache__/forms.cpython-311.pyc 	modified:   19.1 Ecommerce App/Backend/main/admin_portal/__pycache__/views.cpython-311.pyc 	modified:   19.1 Ecommerce App/Backend/main/admin_portal/forms.py 	modified:   19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/add_product.html 	modified:   19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/product_inventory.html 	modified:   19.1 Ecommerce App/Backend/main/admin_portal/views.py 	modified:   19.1 Ecommerce App/Backend/main/db.sqlite3 	new file:   19.1 Ecommerce App/Backend/main/media/uploads/products/running-shoe-371624_1280_NWKOo8T.jpg 	modified:   19.1 Ecommerce App/Backend/main/store/__pycache__/models.cpython-311.pyc 	modified:   19.1 Ecommerce App/Backend/main/store/models.py

--- a/19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/add_product.html
+++ b/19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/add_product.html
@@ -59,10 +59,10 @@
             <h1 class="add-product-headings">ADD NEW PRODUCT</h1>
             <div class="product_form">
                 
-                <form method="POST" action="{% url 'add_product' %}" enctype="multipart/form-data">
+                <form method="POST" action="{% url 'add_product' %}">
                     {% csrf_token %}
                     {{ form.as_p }}
-                    {{ image_form.as_p }}
+                    {{ formset.as_p }}
                     <input type="submit" value="Submit">
                   </form>
                   
