--- a/19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/product_inventory.html
+++ b/19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/product_inventory.html
@@ -59,9 +59,10 @@
             <h1 class="product-inventory-headings">UPDATE PRODUCT DETAILS</h1>
             <div class="product_form">
                 <a href="{% url 'inventory' %}" style="color: white;">&larr; Back to List</a>
-                <form method="POST" action="{% url 'product_inventory' product.id %}" enctype="multipart/form-data">
+                <form method="POST" action="{% url 'product_inventory' product.id %}">
                     {% csrf_token %}
                     {{form}}
+                    {{ formset.as_p }}
                     <input type="submit" value="submit">
                 </form>
                   
