modified:   19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/add_product.html

--- a/19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/add_product.html
+++ b/19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/add_product.html
@@ -61,8 +61,8 @@
                 
                 <form method="POST" action="{% url 'add_product' %}">
                     {% csrf_token %}
-                    {{ form.as_p }}
-                    {{ formset.as_p }}
+                    {{ product_form.as_p }}
+                    {{ product_image_form.as_p }}
                     <input type="submit" value="Submit">
                   </form>
                   
