modified:   19.1 Ecommerce App/Backend/main/admin_portal/__pycache__/forms.cpython-311.pyc 	modified:   19.1 Ecommerce App/Backend/main/admin_portal/__pycache__/views.cpython-311.pyc 	modified:   19.1 Ecommerce App/Backend/main/admin_portal/forms.py 	modified:   19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/add_product.html 	modified:   19.1 Ecommerce App/Backend/main/admin_portal/views.py 	modified:   19.1 Ecommerce App/Backend/main/db.sqlite3 	new file:   19.1 Ecommerce App/Backend/main/media/uploads/products/childrens-shoes-3104832_1280.jpg 	new file:   19.1 Ecommerce App/Backend/main/media/uploads/products/childrens-shoes-3104832_1280_TP6YMwY.jpg 	new file:   19.1 Ecommerce App/Backend/main/media/uploads/products/childrens-shoes-3104832_1280_h28r9Ly.jpg

--- a/19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/add_product.html
+++ b/19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/add_product.html
@@ -59,7 +59,7 @@
             <h1 class="add-product-headings">ADD NEW PRODUCT</h1>
             <div class="product_form">
                 
-                <form method="POST" action="{% url 'add_product' %}">
+                <form method="POST" action="{% url 'add_product' %}" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ product_form.as_p }}
                     {{ product_image_form.as_p }}
