--- a/19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/product_inventory.html
+++ b/19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/product_inventory.html
@@ -61,8 +61,8 @@
                 <a href="{% url 'inventory' %}" style="color: white;">&larr; Back to List</a>
                 <form method="POST" action="{% url 'product_inventory' product.id %}">
                     {% csrf_token %}
-                    {{form}}
-                    {{ formset.as_p }}
+                    {{product_form.as_p}}
+                    {{ product_image_form.as_p }}
                     <input type="submit" value="submit">
                 </form>
                   
