--- a/19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/product_inventory.html
+++ b/19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/product_inventory.html
@@ -66,7 +66,7 @@
                     <input type="submit" value="submit">
                 </form>
                 <h2>Profile Image</h2>
-                  
+                  <img src="{{product.imageURL }}" alt="{{product.name}}" width="50px">
                 <h2>Existing Images</h2>
                 <img src="{{ product.image.url }}" alt="{{ product.name }}" width="50px">
                 {% for image in product_images %}
