modified:   19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/base.html 	modified:   19.1 Ecommerce App/Backend/main/core/templates/core/base.html 	modified:   19.1 Ecommerce App/Backend/main/db.sqlite3

--- a/19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/base.html
+++ b/19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/base.html
@@ -18,10 +18,33 @@
 <body>
     <div class="admin-dashboard">
         {% include 'admin_portal/navbar.html' %}
+
+        <div class="container">
+        {% if messages %}
+        
+        {% for message in messages %}
+        <div class="alert-message">
+
+            {{message}}
+            <p class="close-message">&times;</p>
+          </div>
+        {% endfor %}
+            
+        {% endif %}
+    </div>
     {% block content %}
         
     {% endblock content %}
     
     </div>
+
+    <script>
+        $(document).on('click', '.close-message', function() {
+        // Get the parent element (alert-message) of the clicked close button
+        var message = $(this).parent('.alert-message');
+        // Hide the message
+        message.hide();
+    });
+    </script>
 </body>
 </html>
