modified:   19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/base.html 	modified:   19.1 Ecommerce App/Backend/main/core/templates/core/base.html 	modified:   19.1 Ecommerce App/Backend/main/db.sqlite3 	new file:   19.1 Ecommerce App/Backend/main/media/uploads/products/footwear-5408643_1280_UL3Lf0G.jpg 	new file:   19.1 Ecommerce App/Backend/main/media/uploads/products/footwear-5408643_1280_WFiOTy0.jpg 	new file:   19.1 Ecommerce App/Backend/main/media/uploads/products/leather-shoe-3706748_1280_YKzN53p.jpg 	new file:   19.1 Ecommerce App/Backend/main/media/uploads/products/running-shoe-321199_1280.jpg 	new file:   19.1 Ecommerce App/Backend/main/media/uploads/products/running-shoe-371624_1280_SbSd55s.jpg 	modified:   19.1 Ecommerce App/Backend/main/static/css/admin_portal/admin_portal.css

--- a/19.1 Ecommerce App/Backend/main/static/css/admin_portal/admin_portal.css
+++ b/19.1 Ecommerce App/Backend/main/static/css/admin_portal/admin_portal.css
@@ -24,6 +24,25 @@ a {
 text-decoration: none;
 }
 
+.alert-message {
+  width: 100%;
+  background-color: bisque;
+  display: inline-block;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 1001;
+  padding: .5em 1em;
+}
+
+.alert-message .close-message {
+  float: right;
+  font-size: 2rem;
+  font-weight: 800;
+  cursor: pointer;
+  color: red;
+}
+
 .admin-main-headings {
   text-align: center;
   background-color: rgb(0, 0, 0);
