--- a/19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/base.html
+++ b/19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/base.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="{% static 'css/admin_portal/product_form.css' %}">
     <link rel="stylesheet" href="{% static 'css/admin_portal/inventory.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="admin-dashboard">
