modified:   19.1 Ecommerce App/Backend/main/admin_portal/__pycache__/views.cpython-311.pyc 	modified:   19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/product_inventory.html 	modified:   19.1 Ecommerce App/Backend/main/admin_portal/views.py 	modified:   19.1 Ecommerce App/Backend/main/db.sqlite3 	new file:   19.1 Ecommerce App/Backend/main/media/uploads/products/running-shoe-321199_1280_9aKdjNQ.jpg

--- a/19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/product_inventory.html
+++ b/19.1 Ecommerce App/Backend/main/admin_portal/templates/admin_portal/product_inventory.html
@@ -63,7 +63,7 @@
                     {% csrf_token %}
                     {{product_form.as_p}}
                     {{ product_image_form.as_p }}
-                    <input type="submit" value="submit">
+                    <input type="submit" name="product_form" value="submit">
                 </form>
                 <h2>Profile Image</h2>
                   <img src="{{product.imageURL }}" alt="{{product.name}}" width="50px">
