modified:   19.1 Ecommerce App/Backend/main/cart/templates/cart/cart.html

--- a/19.1 Ecommerce App/Backend/main/cart/templates/cart/cart.html
+++ b/19.1 Ecommerce App/Backend/main/cart/templates/cart/cart.html
@@ -1,11 +1,8 @@
 {% extends 'core/base.html' %}
 
-
 {% block title %}
-    cart
+    Cart
 {% endblock title %}
-    
-
 
 {% block content %}
 <div class="cart-container">
@@ -31,7 +28,6 @@
         {% endif %}
     </table>
 
-    
     <div class="cart-elements-container">
         {% if cart_items %}
         <div class="cart-element-header">
@@ -50,14 +46,14 @@
                 <div class="cart-item-quantity"> 
                     <button type="button" class="reduce-quantity" data-index="{{ item.id }}" style="padding: .3em .5em;">&minus;</button>
                     <span class="item-quantity" data-index="{{ item.id }}">{{ item.quantity }}</span>
-                    <button type="button" class="add-quantity" data-index="{{ item.id }}" style="padding: .3em .5em;">&plus;</button>
+                    <button type="button" class="add-quantity" data-index="{{ item.id }}" style="padding: .3em .5em;" {% if item.quantity >= item.stock_quantity %}disabled{% endif %}>&plus;</button>
                 </div>
                 {% if item.is_sale %}
-                <div class="cart-item-price">$ {{item.sale_price}}</div>
+                <div class="cart-item-price">$ {{ item.sale_price }}</div>
                 {% else %}
-                <div class="cart-item-price">$ {{item.price}}</div> 
+                <div class="cart-item-price">$ {{ item.price }}</div> 
                 {% endif %}
-                <div class="cart-item-total">$ {{item.total_price}}</div>
+                <div class="cart-item-total">$ {{ item.total_price }}</div>
                 <div class="cart-item-remove">
                     <button type="button" data-index="{{ item.id }}" class="remove-item" style="padding: .3em .5em; background-color: red; color: white;">Remove</button>
                 </div>
@@ -70,91 +66,86 @@
         </div>
         {% endif %}
     </div>
-    
-    
 </div>
 
 <script>
     $(document).on('click', '.add-quantity', function(e){
-    e.preventDefault();
-    var productId = $(this).data('index');
-    var quantityElement = $('.item-quantity[data-index="' + productId + '"]');
-    
-    // Convert the quantity to a number and increment
-    var productQty = parseFloat(quantityElement.text()) + 1;
-    
-    $.ajax({
-        type: 'POST',
-        url: '{% url "cart_update" %}',
-        data: {
-            product_id: productId,
-            product_qty: productQty,
-            csrfmiddlewaretoken: '{{ csrf_token }}',
-            action: 'post'
-        },
-        success: function(json){
-            location.reload();
-        },
-        error: function(xhr, errmsg, err){
-            // Handle error
-        }
+        e.preventDefault();
+        var productId = $(this).data('index');
+        var quantityElement = $('.item-quantity[data-index="' + productId + '"]');
+        
+        // Convert the quantity to a number and increment
+        var productQty = parseFloat(quantityElement.text()) + 1;
+        
+        $.ajax({
+            type: 'POST',
+            url: '{% url "cart_update" %}',
+            data: {
+                product_id: productId,
+                product_qty: productQty,
+                csrfmiddlewaretoken: '{{ csrf_token }}',
+                action: 'post'
+            },
+            success: function(json){
+                location.reload();
+            },
+            error: function(xhr, errmsg, err){
+                // Handle error
+            }
+        });
     });
-});
 
-$(document).on('click', '.reduce-quantity', function(e){
-    e.preventDefault();
-    var productId = $(this).data('index');
-    var quantityElement = $('.item-quantity[data-index="' + productId + '"]');
-    
-    // Convert the quantity to a number and decrement
-    var productQty = parseFloat(quantityElement.text()) - 1;
-    
-    if (productQty < 1) {
-
-            return;  
+    $(document).on('click', '.reduce-quantity', function(e){
+        e.preventDefault();
+        var productId = $(this).data('index');
+        var quantityElement = $('.item-quantity[data-index="' + productId + '"]');
+        
+        // Convert the quantity to a number and decrement
+        var productQty = parseFloat(quantityElement.text()) - 1;
+        
+        if (productQty < 1) {
+            return;
         }
-    $.ajax({
-        type: 'POST',
-        url: '{% url "cart_update" %}',
-        data: {
-            product_id: productId,
-            product_qty: productQty,
-            csrfmiddlewaretoken: '{{ csrf_token }}',
-            action: 'post'
-        },
-        success: function(json){
-            location.reload();
-        },
-        error: function(xhr, errmsg, err){
-            // Handle error
-        }
+        
+        $.ajax({
+            type: 'POST',
+            url: '{% url "cart_update" %}',
+            data: {
+                product_id: productId,
+                product_qty: productQty,
+                csrfmiddlewaretoken: '{{ csrf_token }}',
+                action: 'post'
+            },
+            success: function(json){
+                location.reload();
+            },
+            error: function(xhr, errmsg, err){
+                // Handle error
+            }
+        });
     });
-});
 
-
-$(document).on('click', '.remove-item', function(e){
-    e.preventDefault();
-    var productId = $(this).data('index');
-    
-    $.ajax({
-        type: 'POST',
-        url: '{% url "cart_delete" %}',
-        data: {
-            product_id: productId,
-            csrfmiddlewaretoken: '{{ csrf_token }}',
-            action: 'post'
-        },
-        success: function(json){
-            location.reload();
-        },
-        error: function(xhr, errmsg, err){
-            // Handle error
-        }
+    $(document).on('click', '.remove-item', function(e){
+        e.preventDefault();
+        var productId = $(this).data('index');
+        
+        $.ajax({
+            type: 'POST',
+            url: '{% url "cart_delete" %}',
+            data: {
+                product_id: productId,
+                csrfmiddlewaretoken: '{{ csrf_token }}',
+                action: 'post'
+            },
+            success: function(json){
+                location.reload();
+            },
+            error: function(xhr, errmsg, err){
+                // Handle error
+            }
+        });
     });
-});
 
 </script>
 
-
 {% endblock content %}
-    
