modified:   19.1 Ecommerce App/Backend/main/db.sqlite3 	modified:   19.1 Ecommerce App/Backend/main/static/css/admin_portal/admin_portal.css 	modified:   19.1 Ecommerce App/Backend/main/static/css/main.css

--- a/19.1 Ecommerce App/Backend/main/static/css/main.css
+++ b/19.1 Ecommerce App/Backend/main/static/css/main.css
@@ -36,7 +36,7 @@ cursor: pointer;
 
 .alert-message {
   width: 100%;
-  background-color: bisque;
+  background-color: var(--main-color);
   display: inline-block;
   position: fixed;
   top: 0;
