--- a/19.1 Ecommerce App/Backend/main/static/css/admin_portal/admin_portal.css
+++ b/19.1 Ecommerce App/Backend/main/static/css/admin_portal/admin_portal.css
@@ -26,7 +26,7 @@ text-decoration: none;
 
 .alert-message {
   width: 100%;
-  background-color: bisque;
+  background-color: var(--main-color);
   display: inline-block;
   position: fixed;
   top: 0;
