--- a/2. Navbar-001 - HTML,CSS,JS/style.css
+++ b/2. Navbar-001 - HTML,CSS,JS/style.css
@@ -52,12 +52,10 @@ nav li:first-child {
     top: 0;
     right: 0;
     width: 250px;
-    /* height: 100vh; */
     z-index: 999;
     background-color: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(10px);
-    box-shadow: -10px 0px 10px rgba(0, 0, 0, 0.1);
-    /* display: flex; */
+    /* box-shadow: -10px 0px 10px rgba(0, 0, 0, 0.1); */
     display: none;
     flex-direction: column;
     align-items: flex-start;
