--- a/2. Navbar-001 - HTML,CSS,JS/style.css
+++ b/2. Navbar-001 - HTML,CSS,JS/style.css
@@ -53,7 +53,7 @@ nav li:first-child {
     right: 0;
     width: 250px;
     z-index: 999;
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: rgb(255, 255, 255);
     backdrop-filter: blur(10px);
     /* box-shadow: -10px 0px 10px rgba(0, 0, 0, 0.1); */
     display: none;
